# ch32v307-usb

./: .clang-format  .gitignore  CMakeLists.txt  README.md  README.org  apply-codestyle.sh  ch32v307.ld
.github/workflows/: build-firmware.yml  c-unit_test.yml  clang-format-check.yml
boot/: CMakeLists.txt  boot.S  boot.c  main.c
data/: USB-CH32-AllInterrupts.pvs  USB-CH32-AllInterrupts.sr  USB-HID-setup.pvs  USB-HID-setup.sr
inc/: adf435x_control.h  adf435x_interface.h  ch32v307.h  csr.h  device_descriptor.h  dvp_interface.h  gpio_interface.h  helpers.h  irq.h  mmem.h  mmio_ops.h  msgq.h  printf.h  rcc_devids.h  rcc_interface.h  spi_interface.h  time.h  uart_interface.h  usb.h  usb_interface.h  usbhd_interface.h
src/: CMakeLists.txt  adf435x_control.c  adf435x_device.c  adf435x_device.h  arith64.c  dvp_device.c  dvp_device.h  gpio_device.c  gpio_device.h  irq.c  mmem.c  mmio_ops.c  msgq.c  msq_test.c  printf.c  printf_config.h  rcc_device.c  rcc_device.h  spi_device.c  spi_device.h  test_mmem.c  time.c  uart_device.c  uart_device.h  usb.c  usb_descriptors.h  usb_device.c  usb_device.descr  usb_device.h  usbhd_device.c  usbhd_device.h
src/instances/drv/: dvp_instances.c  spi_instances.c  uart_instances.c
src/instances/ext/: adf435x_instances.c
src/usb-config/: downlink.descr  usb_device_full-speed.descr  usb_device_low-speed.descr  usb_fullspeed.cfg  usb_lowspeed.cfg
test/: CMakeLists.txt  test_gpio_device.c  test_mmio_ops.c  test_rcc_device.c  test_spi_device.c  test_uart_device.c
unit-test/: CMakeLists.txt
unit-test/mocks/inc/: Mockgpio_interface.h  Mockirq.h  Mockmmio_ops.h  Mockrcc_interface.h  Mockspi_interface.h  Mocktime.h  Mockuart_interface.h
unit-test/mocks/src/: Mockgpio_interface.c  Mockirq.c  Mockmmio_ops.c  Mockrcc_interface.c  Mockspi_interface.c  Mocktime.c  Mockuart_interface.c
unit-test/test_adf435x/: CMakeLists.txt  test_adf435x_device.c
unit-test/test_dvp/: CMakeLists.txt  test_dvp_device.c
unit-test/test_gpio/: CMakeLists.txt  test_gpio_device.c
unit-test/test_mmio/: CMakeLists.txt  test_mmio_suite.c
unit-test/test_rcc/: CMakeLists.txt  test_rcc_device.c
unit-test/test_spi/: CMakeLists.txt  test_spi_device.c
unit-test/test_uart/: CMakeLists.txt  test_uart_device.c
utils/: CMakeLists.txt  mmio.c  mmio.h
